--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
       }
       h1 {
         font-size: 5rem;
+        color: floralwhite;
       }
     </style>
   </head>
   <body>
-    <h1>Javascript Assignment</h1>
+    <h1>Javascript Assignments</h1>
     <script src="assignment.js"></script>
   </body>
 </html>
